# miniprojeto

./: README.md  analise_g3_historico_clinico_andrei.ipynb  app.py  gráficos_g1_g5_marcos.py  model.pkl  modelorandom.ipynb  projeto_cancer.ipynb  requirements.txt  scaler.pkl
.streamlit/: config.toml
cancer/: analise_g3_historico_clinico_andrei.ipynb  projeto_cancer.ipynb
miniprojeto/: pyproject.toml
miniprojeto/cancer/: gráficos_g1_g5_marcos.py  projeto_cancer.ipynb
miniprojeto/projeto câncer de pulmão/: Dataset.xlsx  Documentação - MP - predição de câncer.docx  predição_cancer.ipynb
projeto câncer de pulmão/: Cópia de Roteiro para Desenvolvimento do Projeto.docx  pipelineds.docx
