[tool.poetry]
name = "projeto-c-ncer-de-pulm-o-20250822t224323z-1-001"
version = "0.1.0"
description = ""
authors = ["Isabela Dumas <isabeladumas12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
ipykernel = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
